Fix baseline alignment

--- a/src/components/SectionHowItWorks/SectionHowItWorks.css
+++ b/src/components/SectionHowItWorks/SectionHowItWorks.css
@@ -29,7 +29,11 @@
 }
 
 .stepTitle {
+  margin-top: 18px;
+  margin-bottom: 18px;
+
   @media (--viewportMedium) {
+    margin-top: 21px;
     margin-bottom: 18px;
   }
 }
