--- a/src/components/SectionLocations/SectionLocations.css
+++ b/src/components/SectionLocations/SectionLocations.css
@@ -28,11 +28,15 @@
 
 .location {
   width: 100%;
-  margin-bottom: 27px;
+  margin-top: 25px;
 
   /* Remove link's hover effect */
   &:hover {
     text-decoration: none;
+  }
+
+  @media (--viewportMedium) {
+    margin-top: 0;
   }
 }
 
@@ -88,7 +92,12 @@
 .linkText {
   @apply --marketplaceH2FontStyles;
   color: var(--matterColor);
+  margin-top: 15px;
   margin-bottom: 0;
+
+  @media (--viewportMedium) {
+    margin-top: 21px;
+  }
 }
 
 .locationName {
